--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2 style="color:black;">OUR FACULTY</h2>
         </div>
     </section>
-    <form action="vishveshpratapsingh31@gmail.com" method="GET">
+    <form action="vishveshpratapsingh31@gmail.com" method="post">
         FILL YOUR NAME :
         <input name="FIRST NAME" maxlength="25" type="text">
         
